# simple-similarity

./: CMakeLists.txt  README.md  README.txt  cbuild.sh
src/: .kdev_include_paths  myIndex.cpp  myIndex.cpp~  myIndex.h  myIndex.h~  phrase.cpp  phrase.h  ptable.cpp  ptable.h  similarity.cpp  similarity.h  tfidf.cpp  tfidf.h  tools.cpp  tools.h
test/: .kdev_include_paths  CMakeLists.txt  main.similarity.cpp  main.similarityBySentence.cpp  main.tfidf.cpp
